impl product add product less

--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -549,7 +549,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d33 : ((-1:ℤ) * ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d29 d32 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d34 : ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d22 d28 d33 eq_int_to_real_coercion eq_identity_coercion
     have d35 : ((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_zero_add
-    have d36 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d36 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d37 : (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
     have d38 : ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d39 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
@@ -615,7 +615,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d99 : (((-2:ℤ) * (c ^ (1:ℕ) : ℝ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) = ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_simple_product_mul_exponential_less
     have d100 : ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d98 d99 eq_identity_coercion comm_ring_mul_identity_coercion comm_ring_mul_identity_coercion
     have d101 : ((2:ℕ) * ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d97 d100 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
-    have d102 : (((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d102 : (((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d103 : ((2:ℕ) * (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d74 d96 d101 d102 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion nat_real_real_coercion_triangle nat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d104 : ((2:ℕ) * (1:ℕ) : ℕ) = (2:ℕ) := by term_derivation_mul_one
     have d105 : ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) = ((2:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
@@ -677,7 +677,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d161 : (((-1:ℤ) * (c ^ (1:ℕ) : ℝ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_simple_product_mul_exponential_less
     have d162 : ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d160 d161 eq_identity_coercion comm_ring_mul_identity_coercion comm_ring_mul_identity_coercion
     have d163 : (((1:ℚ)/2:ℚ) * ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d159 d162 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
-    have d164 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d164 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d165 : (((1:ℚ)/2:ℚ) * (((0:ℕ) + ((-2:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-2:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d136 d158 d163 d164 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion rat_real_real_coercion_triangle rat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d166 : (((1:ℚ)/2:ℚ) * ((2:ℕ) : ℚ) : ℚ) = (1:ℕ) := by term_derivation_literal_mul_literal
     have d167 : ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) = ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
@@ -742,7 +742,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d226 : ((-1:ℤ) * ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d222 d225 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d227 : ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d215 d221 d226 eq_int_to_real_coercion eq_identity_coercion
     have d228 : ((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_zero_add
-    have d229 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d229 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d230 : (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
     have d231 : ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d232 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
@@ -827,7 +827,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d309 : ((-1:ℤ) * ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d305 d308 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d310 : ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d298 d304 d309 eq_int_to_real_coercion eq_identity_coercion
     have d311 : ((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_zero_add
-    have d312 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d312 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d313 : (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
     have d314 : ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d315 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
@@ -889,7 +889,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d371 : ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d369 d370 eq_identity_coercion comm_ring_mul_identity_coercion comm_ring_mul_identity_coercion
     have d372 : ((-1:ℤ) * ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d368 d371 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d373 : ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d361 d367 d372 eq_int_to_real_coercion eq_identity_coercion
-    have d374 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d374 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d375 : (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d360 d373 eq_identity_coercion eq_identity_coercion d374
     have d376 : b = b := by term_derivation_reflection
     have d377 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
@@ -952,7 +952,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d434 : c = c := by term_derivation_reflection
     have d435 : (b * c : ℝ) = ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_atom_mul_atom
     have d436 : (b * c : ℝ) = ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d433 d434 d435 eq_identity_coercion eq_identity_coercion
-    have d437 : (((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d437 : (((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d438 : ((a * b : ℝ) + (b * c : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d432 d436 eq_identity_coercion eq_identity_coercion d437
     have d439 : c = c := by term_derivation_reflection
     have d440 : a = a := by term_derivation_reflection
@@ -971,7 +971,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d453 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d454 : (c ^ (2:ℕ) : ℝ) = ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
     have d455 : ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) = ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_one_mul
-    have d456 : (((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d456 : (((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d457 : (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d451 d455 eq_identity_coercion eq_identity_coercion d456
     have d458 : a = a := by term_derivation_reflection
     have d459 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
@@ -994,7 +994,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d476 : (c * a : ℝ) = ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_atom_mul_atom
     have d477 : ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) = ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d473 d475 d476 eq_identity_coercion eq_identity_coercion
     have d478 : ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_one_mul
-    have d479 : (((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d479 : (((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d480 : (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * ((c ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d471 d478 eq_identity_coercion eq_identity_coercion d479
     have d481 : c = c := by term_derivation_reflection
     have d482 : (c ^ (1:ℕ) : ℝ) = c := by term_derivation_power_one
@@ -1028,7 +1028,7 @@ def h (a b c : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) + (c ^ 
     have d510 : ((-1:ℤ) * ((1:ℕ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_product d506 d509 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d511 : ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_mul_eq d499 d505 d510 eq_int_to_real_coercion eq_identity_coercion
     have d512 : ((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_zero_add
-    have d513 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d513 : (((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d514 : (((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
     have d515 : ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_reflection
     have d516 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) = ((((0:ℕ) + ((-1:ℤ) * ((b ^ (1:ℕ) : ℝ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (c ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_sum_add_product_greater
@@ -1339,7 +1339,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d25 : (((1:ℚ)/2:ℚ) * ((1:ℕ) : ℚ) : ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_mul_one
     have d26 : (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d27 : (((1:ℚ)/2:ℚ) * ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d25 d26 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
-    have d28 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d28 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d29 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) * (((1:ℚ)/2:ℚ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d9 d24 d27 d28 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion rat_real_real_coercion_triangle rat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d30 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_literal d29
     have d31 : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_eq d7 d8 eq_identity_coercion eq_nat_to_real_coercion d30
@@ -1365,7 +1365,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d51 : (((1:ℚ)/2:ℚ) * ((1:ℕ) : ℚ) : ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_mul_one
     have d52 : (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d53 : (((1:ℚ)/2:ℚ) * ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d51 d52 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
-    have d54 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d54 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d55 : ((((0:ℕ) + ((1:ℕ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) * (((1:ℚ)/2:ℚ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d38 d50 d53 d54 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion rat_real_real_coercion_triangle rat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d56 : ((((0:ℕ) + ((1:ℕ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_literal d55
     have d57 : ((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_eq d36 d37 eq_identity_coercion eq_nat_to_real_coercion d56
@@ -1400,7 +1400,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d86 : (a ^ (1:ℕ) : ℝ) = a := by term_derivation_power_one
     have d87 : (((1:ℚ)/2:ℚ) * a : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_non_one_literal_mul_atom
     have d88 : (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_mul_eq d84 d86 d87 eq_rat_to_real_coercion eq_identity_coercion
-    have d89 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d89 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d90 : (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d83 d88 eq_identity_coercion eq_identity_coercion d89
     have d91 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d92 : ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) = ((1:ℕ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
@@ -1408,7 +1408,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d94 : ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) = ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d95 : ((-1:ℤ) * ((1:ℕ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d93 d94 eq_int_to_real_coercion comm_ring_mul_int_to_real_coercion comm_ring_mul_identity_coercion
     have d96 : ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) = ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_eq d77 d92 d95 eq_int_to_real_coercion eq_identity_coercion
-    have d97 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d97 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d98 : (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((-1:ℤ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d76 d96 eq_identity_coercion eq_identity_coercion d97
     have d99 : ((1:ℚ)/2:ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_reflection
     have d100 : a = a := by term_derivation_reflection
@@ -1453,7 +1453,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d139 : (((1:ℚ)/2:ℚ) * ((1:ℕ) : ℚ) : ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_mul_one
     have d140 : (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d141 : (((1:ℚ)/2:ℚ) * ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d139 d140 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
-    have d142 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d142 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d143 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) * (((1:ℚ)/2:ℚ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d123 d138 d141 d142 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion rat_real_real_coercion_triangle rat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d144 : ((((0:ℕ) + ((1:ℕ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_literal d143
     have d145 : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_eq d121 d122 eq_identity_coercion eq_nat_to_real_coercion d144
@@ -1479,7 +1479,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d165 : (((1:ℚ)/2:ℚ) * ((1:ℕ) : ℚ) : ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_mul_one
     have d166 : (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d167 : (((1:ℚ)/2:ℚ) * ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d165 d166 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
-    have d168 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d168 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d169 : ((((0:ℕ) + ((1:ℕ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) * (((1:ℚ)/2:ℚ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_literal_mul_sum d152 d164 d167 d168 real_pow_nat_to_real_pow_nat_coercion comm_ring_add_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion eq_identity_coercion comm_ring_mul_identity_coercion rat_real_real_coercion_triangle rat_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle real_real_real_coercion_triangle eq_identity_coercion
     have d170 : ((((0:ℕ) + ((1:ℕ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + ((1:ℕ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_literal d169
     have d171 : ((a + b : ℝ) / ((2:ℕ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_div_eq d150 d151 eq_identity_coercion eq_nat_to_real_coercion d170
@@ -1502,7 +1502,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d188 : (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_reflection
     have d189 : (((1:ℚ)/2:ℚ) * ((1:ℕ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_product d187 d188 eq_rat_to_real_coercion comm_ring_mul_rat_to_real_coercion comm_ring_mul_identity_coercion
     have d190 : (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_mul_eq d183 d186 d189 eq_rat_to_real_coercion eq_identity_coercion
-    have d191 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d191 : ((((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d192 : (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (2:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (2:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d182 d190 eq_identity_coercion eq_identity_coercion d191
     have d193 : ((1:ℚ)/2:ℚ) = ((1:ℚ)/2:ℚ) := by term_derivation_reflection
     have d194 : b = b := by term_derivation_reflection
@@ -1515,7 +1515,7 @@ def h (a b : ℝ) : (((a ^ (2:ℕ) : ℝ) + (b ^ (2:ℕ) : ℝ) : ℝ) / ((2:ℕ
     have d201 : (a ^ (1:ℕ) : ℝ) = a := by term_derivation_power_one
     have d202 : (((1:ℚ)/2:ℚ) * a : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_non_one_literal_mul_atom
     have d203 : (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) = (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) := by term_derivation_mul_eq d199 d201 d202 eq_rat_to_real_coercion eq_identity_coercion
-    have d204 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less
+    have d204 : ((((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_product_add_product_less comm_ring_add_identity_coercion
     have d205 : (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) = (((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) := by term_derivation_add_eq d198 d203 eq_identity_coercion eq_identity_coercion d204
     have d206 : (2:ℕ) = (2:ℕ) := by term_derivation_reflection
     have d207 : ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) = ((1:ℕ) * ((((0:ℕ) + (((1:ℚ)/2:ℚ) * (b ^ (1:ℕ) : ℝ) : ℝ) : ℝ) + (((1:ℚ)/2:ℚ) * (a ^ (1:ℕ) : ℝ) : ℝ) : ℝ) ^ (2:ℕ) : ℝ) : ℝ) := by term_derivation_non_reduced_power
